--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-./3.table/Kasen_Kilonova_Models_2017-master/
-./3.table/kn_sim_cube_synphot/
-./3.table/Kowalski+13_m_dwarf_flare/
-./3.table/kn_sim_cube_v1/
-./3.table/asteroid_sim_smass_synphot/
-./3.table/smass/
-./3.table/kmtnet/
-./3.table/sn_sim_sncosmo_synphot/
-./3.table/kn_sim_cube_lite/
-*.tar.gz
-*.fits
-test.txt
+# ./3.table/Kasen_Kilonova_Models_2017-master/
+# ./3.table/kn_sim_cube_synphot/
+# ./3.table/Kowalski+13_m_dwarf_flare/
+# ./3.table/kn_sim_cube_v1/
+# ./3.table/asteroid_sim_smass_synphot/
+# ./3.table/smass/
+# ./3.table/kmtnet/
+# ./3.table/sn_sim_sncosmo_synphot/
+# ./3.table/kn_sim_cube_lite/
+# *.tar.gz
+# *.fits
+# test.txt
+3.table
